Add chat window

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="harta">Harta</string>
     <string name="chat">Chat</string>
     <string name="examene">Examene</string>
+    <string name="send">Send</string>
+    <string name="introdu_mesajul_tau">Introdu mesajul tau</string>
 </resources>
