--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="harta">Harta</string>
     <string name="chat">Chat</string>
     <string name="examene">Examene</string>
+    <string name="Nume_utilizator">Nume utilizator</string>
+    <string name="Setari">Setari cont</string>
+    <string name="notificatii">Notificări</string>
+    <string name="Adauga_cont">Adaugă cont</string>
+    <string name="ajutor">Ajutor</string>
+    <string name="Logout">Ieșire</string>
 </resources>
