Add icon,add launch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,6 @@
     <string name="Profil">Profil</string>
     <string name="day_name_placeholder">Luni</string>
     <string name="week_number_placeholder">Saptamana 27</string>
+    <string name="Welcome">Welcome</string>
+    <string name="Unitbv">UNITBV</string>
 </resources>
