add map and notification method

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,6 @@
     <string name="week_number_placeholder">Saptamana 27</string>
     <string name="Welcome">Welcome</string>
     <string name="Unitbv">UNITBV</string>
+    <string name="route">Get Route to V</string>
+    <string name="get_route_to_v">Get direction to V</string>
 </resources>
