Remember me Show password

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="week_number_placeholder">Saptamana 27</string>
     <string name="Welcome">Welcome</string>
     <string name="Unitbv">UNITBV</string>
+    <string name="remember_me">Remember me</string>
 </resources>
